// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAliasMap > should create root alias for entity with no includes 1`] = `
[
  {
    "metadata": {
      "entity": {
        "cache": null,
        "comment": null,
        "database": null,
        "decorator": "Entity",
        "name": "users",
        "namespace": "app",
      },
      "fields": [
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "id",
          "max": null,
          "min": null,
          "name": "id",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "uuid",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "name",
          "max": null,
          "min": null,
          "name": "name",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "email",
          "max": null,
          "min": null,
          "name": "email_address",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "age",
          "max": null,
          "min": null,
          "name": "age",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "integer",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "department",
          "max": null,
          "min": null,
          "name": "dept_code",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
      ],
      "relations": [],
    },
    "relationKey": null,
    "schema": "app",
    "tableAlias": "t0",
    "tableName": "users",
  },
]
`;

exports[`buildAliasMap — ManyToMany includes > should produce 3 alias entries — root (t0), join table (t1, __join suffix), and target (t2) 1`] = `
[
  {
    "metadata": {
      "entity": {
        "cache": null,
        "comment": null,
        "database": null,
        "decorator": "Entity",
        "name": "users",
        "namespace": "app",
      },
      "fields": [
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "id",
          "max": null,
          "min": null,
          "name": "id",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "uuid",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "name",
          "max": null,
          "min": null,
          "name": "name",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "email",
          "max": null,
          "min": null,
          "name": "email_address",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "age",
          "max": null,
          "min": null,
          "name": "age",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "integer",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "department",
          "max": null,
          "min": null,
          "name": "dept_code",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
      ],
      "relations": [
        {
          "findKeys": {
            "id": "tag_id",
          },
          "foreignConstructor": [Function],
          "foreignKey": "id",
          "joinKeys": {
            "id": "user_id",
          },
          "joinTable": "users_x_tags",
          "key": "tags",
          "options": {},
          "orderBy": null,
          "type": "ManyToMany",
        },
      ],
    },
    "relationKey": null,
    "schema": "app",
    "tableAlias": "t0",
    "tableName": "users",
  },
  {
    "metadata": {
      "entity": {
        "cache": null,
        "comment": null,
        "database": null,
        "decorator": "Entity",
        "name": "users",
        "namespace": "app",
      },
      "fields": [
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "id",
          "max": null,
          "min": null,
          "name": "id",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "uuid",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "name",
          "max": null,
          "min": null,
          "name": "name",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "email",
          "max": null,
          "min": null,
          "name": "email_address",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "age",
          "max": null,
          "min": null,
          "name": "age",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "integer",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "department",
          "max": null,
          "min": null,
          "name": "dept_code",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
      ],
      "relations": [
        {
          "findKeys": {
            "id": "tag_id",
          },
          "foreignConstructor": [Function],
          "foreignKey": "id",
          "joinKeys": {
            "id": "user_id",
          },
          "joinTable": "users_x_tags",
          "key": "tags",
          "options": {},
          "orderBy": null,
          "type": "ManyToMany",
        },
      ],
    },
    "relationKey": "tags__join",
    "schema": "app",
    "tableAlias": "t1",
    "tableName": "users_x_tags",
  },
  {
    "metadata": {
      "entity": {
        "cache": null,
        "comment": null,
        "database": null,
        "decorator": "Entity",
        "name": "tags",
        "namespace": "app",
      },
      "fields": [
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "id",
          "max": null,
          "min": null,
          "name": "id",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "uuid",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "label",
          "max": null,
          "min": null,
          "name": "label",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
      ],
      "relations": [],
    },
    "relationKey": "tags",
    "schema": "app",
    "tableAlias": "t2",
    "tableName": "tags",
  },
]
`;

exports[`compileFrom > should compile FROM with cteFrom using aliasMap root 1`] = `"FROM "my_cte" AS "t0""`;

exports[`compileFrom > should compile schema-qualified FROM clause 1`] = `"FROM "app"."users" AS "t0""`;

exports[`compileFrom > should compile unqualified FROM clause 1`] = `"FROM "users" AS "t0""`;

exports[`compileSelect > should compile all fields 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department""`;

exports[`compileSelect > should compile selected fields only 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name""`;

exports[`compileSelect — FK column injection from ManyToOne joinKeys > should NOT duplicate FK column when it is already declared as a field 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."title" AS "t0_title", "t0"."user_id" AS "t0_user_id""`;

exports[`compileSelect — FK column injection from ManyToOne joinKeys > should inject FK column (user_id) that is absent from fields list 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."title" AS "t0_title", "t0"."user_id" AS "t0_user_id""`;

exports[`compileSelect — FK column injection from ManyToOne joinKeys > should skip FK injection for ManyToMany relations (type guard) 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."title" AS "t0_title""`;

exports[`compileSelect — non-empty includes > should emit columns from multiple included relations with distinct alias prefixes 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", "t0"."tag_id" AS "t0_tag_id", "t1"."id" AS "t1_id", "t1"."label" AS "t1_label", "t1"."active" AS "t1_active", "t2"."id" AS "t2_id", "t2"."bio" AS "t2_bio""`;

exports[`compileSelect — non-empty includes > should honour include.select and emit only the specified foreign fields 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", "t0"."tag_id" AS "t0_tag_id", "t1"."id" AS "t1_id", "t1"."label" AS "t1_label""`;

exports[`compileSelect — non-empty includes > should include all foreign entity columns with the target alias prefix 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", "t0"."tag_id" AS "t0_tag_id", "t1"."id" AS "t1_id", "t1"."label" AS "t1_label", "t1"."active" AS "t1_active""`;

exports[`compileSelect — raw selections > should compile raw selection with params 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", COALESCE($1, $2) AS "safe_name""`;

exports[`compileSelect — window functions > should compile LAG with column arg 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", LAG("t0"."age", 1) OVER (ORDER BY "t0"."name" ASC) AS "prev_age""`;

exports[`compileSelect — window functions > should compile NTILE with numeric arg 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", NTILE(4) OVER (ORDER BY "t0"."age" ASC) AS "quartile""`;

exports[`compileSelect — window functions > should compile RANK with no args and empty OVER 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", RANK() OVER (ORDER BY "t0"."age" DESC) AS "rank""`;

exports[`compileSelect — window functions > should compile ROW_NUMBER with partitionBy and orderBy 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", ROW_NUMBER() OVER (PARTITION BY "t0"."dept_code" ORDER BY "t0"."age" DESC) AS "row_num""`;

exports[`compileSelect — window functions > should compile SUM with partitionBy only (no orderBy) 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", SUM("t0"."age") OVER (PARTITION BY "t0"."dept_code") AS "dept_total""`;

exports[`compileSelect — window functions > should compile multiple window functions 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", ROW_NUMBER() OVER (ORDER BY "t0"."name" ASC) AS "rn", DENSE_RANK() OVER (PARTITION BY "t0"."dept_code" ORDER BY "t0"."age" DESC) AS "dr""`;

exports[`compileSelect — window functions > should resolve custom column name in window function 1`] = `"SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age", "t0"."dept_code" AS "t0_department", COUNT("t0"."email_address") OVER (PARTITION BY "t0"."dept_code") AS "email_count""`;
